--- a/blog/Templates/base_layout.html
+++ b/blog/Templates/base_layout.html
@@ -4,19 +4,25 @@
   <head>
     <meta charset="utf-8">
     <title>Articles</title>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="assets/style.css">
   </head>
   <body>
     <header class="wrapper">
-      <h1><a href="{% url 'articles:list' %}"><img src="{% static 'article.png' %}" height="60" width="120"></a></h1>
+      <h1><a href="{% url 'home' %}"><img src="{% static 'article.png' %}" height="60" width="120"></a></h1>
       <nav>
         <ul>
+          {% if user.is_authenticated %}
           <li>
             <form class="logout-link" action="{% url 'accounts:logout' %}" method="post">
               {% csrf_token %}
               <button type="submit">Logout</button>
             </form>
           </li>
+          <li><a href="{% url 'articles:create' %}" class="highlight">New Article</a></li>
+          {% else %}
+            <li><a href="{% url 'accounts:login' %}">Login</a></li>
+            <li><a href="{% url 'accounts:signup' %}">Signup</a></li>
+          {%endif%}
         </ul>
       </nav>
     </header>
