--- a/blog/Templates/base_layout.html
+++ b/blog/Templates/base_layout.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <title>Articles</title>
-    <link rel="stylesheet" href="assets/style.css">
+    <link rel="stylesheet" href="/static/style.css">
   </head>
   <body>
     <header class="wrapper">
