--- a/blog/assets/style.css
+++ b/blog/assets/style.css
@@ -58,4 +58,88 @@ nav button{
   grid-gap: 30px;
 }
 
-.article
+.article {
+  padding: 10px;
+  border: 1px solid #00dba0;
+  position: relative;
+  padding-bottom: 40px;
+}
+
+.article h2{
+  font-size: 1.2em;
+}
+
+.article-detail .article{
+  padding: 0;
+}
+
+.article .author{
+  padding: 10px;
+  background: 300dba0;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  margin: 0;
+  color: #0f121f;
+}
+
+.article-detail .article img{
+  max-width: 100%;
+}
+
+.article-detail .article h2{
+  text-align: center;
+  margin: 20px auto;
+  font-size: 2em;
+}
+
+.article-detail .article p{
+  text-align: center;
+}
+
+.site-form{
+  margin-top: 60px;
+  border: 1px solid #00dba0;
+  padding: 20px;
+}
+
+.site-form input,site-form textarea{
+  display: block;
+  margin: 20px 0 0 0;
+  padding: 10px;
+}
+
+a.highlight{
+  border: 1px solid #00dba0;
+  padding: 10px;
+  border-radius:4px;
+  color: #00dba0;
+}
+
+.helptext, .helptext ul{
+  margin: 0 auto 20px;
+  color: #bbb;
+  font-size: 0.9em;
+  display: block;
+}
+
+.errorlist li{
+  padding: 10px;
+  list-style-type: none;
+  border: 1px solid #ff5722;
+  color: #ff5722;
+  margin:10px 0;
+}
+
+.errorlist{
+  padding: 0;
+}
+
+.site-form input[type="submit"]{
+  background: #00dba0;
+  border: 0;
+  color: #fff;
+  font-size: 1.2em;
+  border-radius:4px;
+  margin:10px 0;
+}
