--- a/blog/articles/Templates/articles/article_create.html
+++ b/blog/articles/Templates/articles/article_create.html
@@ -2,11 +2,12 @@
 
 {% block content %}
 <div class="create-article">
-  <h2>Create an Awesom New Article</h2>
+  <h2>Create an Awezome New Article</h2>
   <form class="site-form" action="{% url 'articles:create' %}"method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form }}
     <input type="submit"value="Create">
   </form>
 </div>
+<script type="/static/slugify.js"></script>
 {% endblock %}
